# DataLakeHouse_PFE

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/analytics/: Dockerfile  analytics_app.py  requirements.txt
apps/analytics/pages/: 1_overview.py  2_resolution_dynamics.py  3_workload.py  4_relationships.py  5_anomalies.py
apps/inference/: Dockerfile  inference_app.py  requirements.txt
cortex/: 01_train_enriched.sql  02_train_embeddings.sql  03_predict.sql  04_evaluate.sql  arbitration.py  fix_summary.py  llm_client.py
dbt_project/macros/: consolidate_label.sql
dbt_project/models/marts/analytics/: _analytics_tests.yml  mart_analytics_deps.sql  mart_analytics_ops.sql  mart_analytics_workload.sql
dbt_project/models/marts/ml/: _ml_tests.yml  mart_ml.sql
dbt_project/models/staging/: stg_changelog.sql
docs/: architecture.md  data_dictionary.md  decisions_log.md
experiments/: 01_k_sweep.py  02_boost_ablation.py  03_architecture_ablation.py  04_keyword_rerank.py
load/: 01_create_database.sql  03_put_files.py  05_verify_counts.sql  retrieval.py  run_cortex.py  run_ml_pipeline.py  run_phase1.py  test_cortex.py  upload_predictions.py
